tests/baselines/reference/restParamAsOptional(strict=true).errors.txt
restParamAsOptional.ts(1,12): error TS7019: Rest parameter 'x' implicitly has an 'any[]' type.
restParamAsOptional.ts(1,16): error TS1047: A rest parameter cannot be optional.
restParamAsOptional.ts(2,16): error TS1048: A rest parameter cannot have an initializer.


==== restParamAsOptional.ts (3 errors) ====
    function f(...x?) { }
               ~~~~~
!!! error TS7019: Rest parameter 'x' implicitly has an 'any[]' type.
                   ~
!!! error TS1047: A rest parameter cannot be optional.
    function f2(...x = []) { }
                   ~
!!! error TS1048: A rest parameter cannot have an initializer.